grid cards refactored, remove 2 hot projects from list, change page size

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1767,19 +1767,11 @@ I {
   grid-column: span 2;
 }
 
-.cards_hot_container {
-  grid-template-columns: repeat(auto-fill, minmax(22rem, 6fr));
-}
-.cards_hot_container .project_card:nth-of-type(2n) {
-  display: none;
-}
-.cards_hot_container .project_card:nth-of-type(3n) {
-  display: none;
+.cards_container {
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 }
 
 .cards_portfolio_container {
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 8fr));
-  justify-content: center;
   overflow-y: auto;
   padding-top: 0.5rem;
 }
@@ -2688,12 +2680,6 @@ I {
 }
 
 @media screen and (min-width: 767px) {
-  .cards_hot_container .project_card:nth-of-type(3n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(2n) {
-    display: none;
-  }
   .flex_responsive {
     display: flex;
     flex-direction: row;
@@ -2716,15 +2702,6 @@ I {
   }
 }
 @media screen and (min-width: 917px) {
-  .cards_hot_container .project_card:nth-of-type(2n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(3n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(4n) {
-    display: none;
-  }
   .flex_responsive {
     flex-direction: row;
   }
@@ -2741,47 +2718,20 @@ I {
     display: flex;
   }
 }
-@media screen and (min-width: 1185px) {
+/* @media screen and (min-width: 1185px) {
+
+} */
+@media screen and (min-width: 1342px) {
   .nav_btn .label_btn:not(.label_lang) {
     display: flex;
   }
   .nav_btn .icon_btn {
     display: none;
   }
-  .cards_hot_container .project_card:nth-of-type(4n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(2n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(3n) {
-    display: none;
-  }
-}
-@media screen and (min-width: 1342px) {
   .cards_service_container .service_card:nth-child(2),
   .cards_service_container .service_card:nth-child(3),
   .cards_service_container .service_card:nth-child(6) {
     grid-column: span 3;
-  }
-}
-@media screen and (min-width: 1478px) {
-  .cards_hot_container .project_card:nth-of-type(3n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(6n) {
-    display: none;
-  }
-}
-@media screen and (min-width: 1684px) {
-  .cards_hot_container .project_card:nth-of-type(2n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(2n) {
-    display: flex;
-  }
-  .cards_hot_container .project_card:nth-of-type(6n) {
-    display: flex;
   }
 }
 @media (prefers-reduced-motion: reduce) {
