--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -704,8 +704,8 @@ I {
         opacity: 0;
         transition: var(--T_M);
     }
-    .shield_screen {
-        transition-delay: 250ms;
+    .dev_screen {
+        transition-delay: 500ms;
     }
     .icon_show {
         opacity: 0.7;
