--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -196,7 +196,7 @@
     --NVC_T: rgba(242, 242, 242, 0.75);
     --bgC: rgb(230, 230, 230);
     --bgC_T: rgba(242, 242, 242, 0.75);
-    --bgC_UT: rgba(242, 242, 242, 0.25);
+    --bgC_UT: rgba(242, 242, 242, 0.5);
     --bgC_C: rgb(26, 26, 26);
     --bgC_C_T: rgba(26, 26, 26, 0.15);
     --BS_SB: rgba(0, 0, 0, 0.1);
@@ -236,7 +236,7 @@
     --NVC_T: rgba(13, 13, 13, 0.75);
     --bgC: rgb(26, 26, 26);
     --bgC_T: rgba(13, 13, 13, 0.75);
-    --bgC_UT: rgba(13, 13, 13, 0.25);
+    --bgC_UT: rgba(13, 13, 13, 0.5);
     --bgC_C: rgb(230, 230, 230);
     --bgC_C_T: rgba(230, 230, 230, 0.15);
     --BS_SB: rgba(255, 255, 255, 0.1);
@@ -1618,9 +1618,8 @@ I {
 }
 
 .service_card {
-    transition: all 500ms ease-in-out;
-
     .info_card {
+        transition: all 500ms ease-in-out;
         @include flex(column, center, center);
         background: var(--bgC_UT);
         width: 100%;
@@ -1650,7 +1649,6 @@ I {
         transform: scale(1.2);
     }
     &:hover {
-        background: var(--bgC_T);
         .info_card {
             background: var(--bgC_T);
         }
@@ -1771,7 +1769,7 @@ I {
 }
 .grid_container {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 8fr));
 }
 .cards_service_container {
     display: grid;
