--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1695,7 +1695,7 @@ I {
         align-items: center;
         width: 100%;
         height: 100%;
-        padding: 1rem;
+        padding: var(--XL);
         transition: var(--T_F);
         background: var(--bgM);
         transform: translateY(100%);
@@ -1703,14 +1703,15 @@ I {
         .title {
             width: 100%;
             text-align: center;
-            margin-bottom: 1rem;
             font-size: var(--FS_L);
             color: var(--FC);
-            padding: 1rem;
+            margin-bottom: var(--MD);
+            line-height: 1;
         }
         .subtitle {
+            width: 100%;
+            text-align: center;
             font-size: var(--FS_N);
-            margin-bottom: 0.5rem;
         }
         .icons_project_container {
             display: flex;
