--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -784,180 +784,6 @@ I {
         fill: #00cde2;
     }
 }
-.impulso_icon_svg {
-    .cls-1 {
-        fill: #c01918;
-    }
-    .cls-2 {
-        fill: var(--TC);
-    }
-}
-.verona_icon_svg {
-    .cls-1 {
-        fill: rgb(178, 159, 16);
-    }
-    .cls-2 {
-        fill: var(--TC);
-    }
-    .cls-3 {
-        fill: rgb(219, 10, 21);
-    }
-    .cls-4 {
-        fill: #ffffff;
-    }
-}
-.gorgona_icon_svg {
-    .cls-1,
-    .cls-2 {
-        fill: rgb(216, 171, 121);
-    }
-    .cls-2 {
-        fill-rule: evenodd;
-    }
-}
-.bucefalos_icon_svg {
-    .cls-1 {
-        fill: var(--TC);
-    }
-    .cls-2 {
-        fill: #b77e0b;
-    }
-}
-.krazy_icon_svg {
-    .cls-1 {
-        fill: #e10b17;
-    }
-    .cls-2 {
-        fill: #fff;
-    }
-    .cls-3 {
-        fill: #000;
-    }
-    .cls-4 {
-        fill: var(--TC);
-    }
-}
-.camaleonica_icon_svg {
-    height: 100%;
-    width: auto;
-    .cls-1 {
-        fill: #633188;
-    }
-    .cls-2 {
-        fill: #d1709b;
-    }
-    .cls-3 {
-        fill: #f3a7c6;
-    }
-    .cls-4 {
-        fill: #6ec6d8;
-    }
-    .cls-5 {
-        fill: #fff;
-    }
-    .cls-6 {
-        fill: #000001;
-    }
-}
-.leiru_icon_svg {
-    .polygon {
-        fill: rgb(24, 160, 56);
-    }
-    .text {
-        .cls-2 {
-            fill: #fff;
-        }
-    }
-}
-.hermed_icon_svg {
-    .cls-1,
-    .cls-8 {
-        fill: #f1c4dc;
-    }
-    .cls-1,
-    .cls-11 {
-        stroke: #996884;
-    }
-    .cls-1,
-    .cls-11,
-    .cls-14,
-    .cls-15,
-    .cls-19,
-    .cls-3,
-    .cls-6,
-    .cls-9 {
-        stroke-miterlimit: 10;
-    }
-    .cls-1,
-    .cls-11,
-    .cls-14,
-    .cls-15,
-    .cls-3,
-    .cls-6,
-    .cls-9 {
-        stroke-width: 0.05px;
-    }
-    .cls-2 {
-        fill: #e6cd00;
-    }
-    .cls-14,
-    .cls-3 {
-        fill: #eeeded;
-    }
-    .cls-3,
-    .cls-6 {
-        stroke: #020202;
-    }
-    .cls-4 {
-        fill: #e6b8d5;
-    }
-    .cls-5 {
-        fill: #996884;
-    }
-    .cls-15,
-    .cls-6 {
-        fill: #fff;
-    }
-    .cls-7 {
-        fill: #ece3e6;
-    }
-    .cls-11,
-    .cls-9 {
-        fill: none;
-    }
-    .cls-9 {
-        stroke: #000;
-        stroke-linecap: round;
-    }
-    .cls-10 {
-        clip-path: url(#clip-path);
-    }
-    .cls-12 {
-        fill: #b27aa3;
-    }
-    .cls-13 {
-        fill: #daaac9;
-    }
-    .cls-14,
-    .cls-15 {
-        stroke: #030304;
-    }
-    .cls-16 {
-        fill: #885b49;
-    }
-    .cls-17 {
-        clip-path: url(#clip-path-2);
-    }
-    .cls-18 {
-        fill: #cc1976;
-    }
-    .cls-19 {
-        fill: #cd78ac;
-        stroke: #5f256b;
-        stroke-width: 0.11px;
-    }
-}
-
 //^^DESIGN ICONS COLORS
 .illustrator_icon_svg {
     .cls-1 {
@@ -1783,12 +1609,36 @@ I {
         grid-column: span 2;
     }
 }
-.cards_container {
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+.cards_presentation {
+    width: 100%;
+    @include flex(row, space-between, center);
+    border-bottom: solid 2px var(--FC);
+    padding: 2rem 0 1rem;
+    margin-bottom: 1rem;
+    .subtitle_section {
+        margin: 0;
+    }
+    .portfolio_btn {
+        width: fit-content;
+        font-size: var(--FS_L);
+        color: var(--TC);
+    }
+}
+.cards_hot_container {
+    @include flex(row, center, center);
+    flex-wrap: wrap;
+
+    font-size: var(--FS_L);
+    .project_card {
+        min-width: 20rem;
+        max-width: 20%;
+    }
 }
 .cards_portfolio_container {
     overflow-y: auto;
     padding-top: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 }
 .lists_container {
     @include flex(row, flex-start, flex-start);
@@ -2363,13 +2213,27 @@ I {
         justify-content: flex-start;
     }
 }
-.portfolio_section {
-    .portfolio_btn {
-        margin-top: 0.5rem;
-        border-radius: 0 0 0.5rem 0.5rem;
-        border-color: var(--SC);
+.clients_list {
+    @include flex(row, center, center);
+    flex-wrap: wrap;
+    gap: var(--XL);
+    .icon_container {
+        --logoSize: 10rem;
+        height: var(--logoSize);
+        width: auto;
+        max-width: calc(var(--logoSize) * 2);
+        SVG {
+            height: 100%;
+            width: auto;
+        }
+        IMG {
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+        }
     }
 }
+
 .nav_menu {
     position: sticky;
     top: 0;
@@ -2523,8 +2387,6 @@ I {
     }
 }
 
-/* ! */
-
 .menu_social_btns_container {
     @include flex(column, center, center);
 
@@ -2533,7 +2395,6 @@ I {
 }
 .animation_up {
     position: relative;
-    z-index: -1;
 }
 
 .animation_up:nth-of-type(2),
