--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,14 @@
   --warning: rgb(218, 165, 32);
   --danger: rgb(178, 34, 34);
   --good: rgb(34, 139, 34);
+  --lightRed: hsl(0, 100%, 67%);
+  --bgLightRed: hsl(0, 100%, 67%, 0.075);
+  --greenTeal: hsl(166, 100%, 37%);
+  --bgGreenTeal: hsl(166, 100%, 37%, 0.075);
+  --danger: var(--lightRed);
+  --bgDanger: var(--bgLightRed);
+  --good: var(--greenTeal);
+  --bgGood: var(--bgGreenTeal);
   --logoGray: rgb(203, 203, 203);
   --logoPurpleL: hsl(260, 84%, 25%);
   --logoPurpleD: hsl(240, 55%, 60%);
@@ -1742,7 +1750,8 @@ I {
 .form {
   position: relative;
 }
-.form .form_response_container {
+
+.form_response_container {
   position: absolute;
   top: calc(50% - 4rem);
   left: 50%;
@@ -1757,7 +1766,7 @@ I {
   display: none;
   opacity: 0;
 }
-.form .form_response_container .form_response {
+.form_response_container .form_response {
   text-align: center;
   font-size: var(--FS_L);
 }
@@ -2531,6 +2540,18 @@ I {
 }
 .btn_active .cls-1 {
   fill: var(--TC_C);
+}
+
+.good {
+  background: var(--bgGood);
+  color: var(--whiteOff);
+  border-color: var(--good);
+}
+
+.danger {
+  background: var(--bgDanger);
+  color: var(--blackOff);
+  border-color: var(--danger);
 }
 
 @media screen and (min-width: 767px) {
