--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -31,6 +31,16 @@
     --danger: rgb(178, 34, 34);
     --good: rgb(34, 139, 34);
 
+    --lightRed: hsl(0, 100%, 67%);
+    --bgLightRed: hsl(0, 100%, 67%, 0.075);
+    --greenTeal: hsl(166, 100%, 37%);
+    --bgGreenTeal: hsl(166, 100%, 37%, 0.075);
+
+    --danger: var(--lightRed);
+    --bgDanger: var(--bgLightRed);
+    --good: var(--greenTeal);
+    --bgGood: var(--bgGreenTeal);
+
     --logoGray: rgb(203, 203, 203);
     --logoPurpleL: hsl(260, 84%, 25%);
     --logoPurpleD: hsl(240, 55%, 60%);
@@ -1756,25 +1766,25 @@ I {
 }
 .form {
     position: relative;
-    .form_response_container {
-        position: absolute;
-        top: calc(50% - 4rem);
-        left: 50%;
-        transform: translate(-50%, -50%);
-        height: auto;
-        transition: var(--T_F);
-        padding: 1rem;
-        border-style: solid;
-        border-width: 2px;
-        border-color: transparent;
-        border-radius: 0.5rem;
-        display: none;
-        opacity: 0;
-        .form_response {
-            text-align: center;
+}
+.form_response_container {
+    position: absolute;
+    top: calc(50% - 4rem);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+    transition: var(--T_F);
+    padding: 1rem;
+    border-style: solid;
+    border-width: 2px;
+    border-color: transparent;
+    border-radius: 0.5rem;
+    display: none;
+    opacity: 0;
+    .form_response {
+        text-align: center;
 
-            font-size: var(--FS_L);
-        }
+        font-size: var(--FS_L);
     }
 }
 .contact_form {
@@ -2473,6 +2483,16 @@ I {
     .cls-1 {
         fill: var(--TC_C);
     }
+}
+.good {
+    background: var(--bgGood);
+    color: var(--whiteOff);
+    border-color: var(--good);
+}
+.danger {
+    background: var(--bgDanger);
+    color: var(--blackOff);
+    border-color: var(--danger);
 }
 @media screen and (min-width: 767px) {
     .flex_responsive {
