--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1781,6 +1781,8 @@ I {
     border-radius: 0.5rem;
     display: none;
     opacity: 0;
+    justify-content: center;
+    align-items: center;
     .form_response {
         text-align: center;
 
