--- a/src/css/style.css
+++ b/src/css/style.css
@@ -294,6 +294,7 @@ INPUT[type=text],
 INPUT[type=email],
 TEXTAREA {
   border: none;
+  border-radius: var(--SM);
   background: var(--bgC);
   color: var(--TC);
   font-size: var(--FS_S);
@@ -935,7 +936,6 @@ I {
 
 .icon_container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 0.5rem;
@@ -949,9 +949,9 @@ I {
 
 .bubble {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   position: absolute;
   background: var(--NVC);
   border-radius: 0.5rem;
@@ -1069,7 +1069,7 @@ I {
   width: 100%;
   color: var(--TC_C);
   outline: solid 2px var(--FC);
-  border-radius: 2rem;
+  border-radius: var(--XL);
   text-align: center;
   padding: 1rem 0.5rem;
   cursor: pointer;
@@ -1089,9 +1089,9 @@ I {
 
 .btn_down {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 8rem;
   height: 6rem;
   color: var(--TC);
@@ -1127,7 +1127,6 @@ I {
   height: 100%;
   color: var(--TC);
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -1152,7 +1151,6 @@ I {
 
 .extra_btn {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   fill: var(--TC);
@@ -1173,7 +1171,6 @@ I {
 }
 
 .more_btn {
-  border-radius: 0.5rem;
   color: var(--TC);
   font-weight: var(--FW_B);
   font-size: var(--FS_N);
@@ -1196,7 +1193,6 @@ I {
   font-size: var(--FS_N);
   color: var(--TC);
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -1258,7 +1254,6 @@ I {
 
 .menu_btn {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: auto;
@@ -1348,12 +1343,10 @@ I {
 
 .title_section {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: auto;
-  margin-top: 2rem;
   -webkit-text-stroke: 1px var(--FC);
   color: transparent;
   font-size: var(--FS_X);
@@ -1408,9 +1401,9 @@ I {
 .service_card .info_card {
   transition: all 500ms ease-in-out;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   background: var(--bgC_UT);
   width: 100%;
   height: 100%;
@@ -1480,9 +1473,9 @@ I {
   left: 0;
   right: 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   padding: var(--XL);
@@ -1506,13 +1499,10 @@ I {
 }
 .project_card .info_project_container .icons_project_container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
-  text-align: flex-start;
-  -moz-column-gap: 0.3rem;
-       column-gap: 0.3rem;
-  row-gap: 0.5rem;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: var(--SM);
   width: 100%;
   text-align: center;
 }
@@ -1544,7 +1534,6 @@ I {
 
 .btns_container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-top: 1rem;
@@ -1598,16 +1587,14 @@ I {
   width: -moz-fit-content;
   width: fit-content;
   font-size: var(--FS_L);
-  color: var(--TC);
+  color: var(--midGray);
 }
 
 .cards_hot_container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  font-size: var(--FS_L);
 }
 .cards_hot_container .project_card {
   min-width: 20rem;
@@ -1619,6 +1606,10 @@ I {
   padding-top: 0.5rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
+  align-items: center;
 }
 
 .lists_container {
@@ -1687,7 +1678,6 @@ I {
 .list_btns_container .search_list_btn {
   text-transform: uppercase;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
@@ -1891,7 +1881,6 @@ I {
 }
 .section_divider .quote_container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -1976,15 +1965,12 @@ I {
   justify-content: flex-start;
   align-items: center;
 }
-.section .content {
-  padding: 4rem 0;
-}
 
 .section_content {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   min-height: calc(100vh - var(--NVH));
   min-height: var(--FS_NVH);
 }
@@ -2047,8 +2033,6 @@ I {
 }
 .about_section .section_content {
   position: relative;
-  justify-content: center;
-  align-items: flex-start;
 }
 .about_section .about_salute {
   width: 100%;
@@ -2129,7 +2113,6 @@ I {
 
 .clients_section {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -2140,7 +2123,6 @@ I {
 }
 .clients_section .client_logo_container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 1rem 1.5rem;
@@ -2171,7 +2153,6 @@ I {
 }
 .contact_section .whatsapp_btn {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 4rem;
@@ -2240,7 +2221,6 @@ I {
 
 .clients_list {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -2273,7 +2253,6 @@ I {
   background: var(--NVC_T);
   z-index: 5;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -2297,7 +2276,6 @@ I {
 
 .nav_menu_controler {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -2311,7 +2289,6 @@ I {
 }
 .nav_menu_controler .nav_menu_link_btns {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -2336,9 +2313,9 @@ I {
   top: 0;
   border-radius: 0.5rem 0.5rem 0 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: auto;
   width: 100%;
   background: var(--NVC);
@@ -2375,7 +2352,6 @@ I {
 }
 .phone_menu_controler .extra_btns_container .label_btn {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   height: var(--iconD);
@@ -2399,9 +2375,9 @@ I {
 
 .menu_social_container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   position: fixed;
   bottom: 4rem;
   left: 2rem;
@@ -2440,9 +2416,9 @@ I {
 
 .menu_social_btns_container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   display: none;
   opacity: 0;
 }
@@ -2559,7 +2535,6 @@ I {
 @media screen and (min-width: 767px) {
   .flex_responsive {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
   }
