--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -332,6 +332,8 @@ INPUT[type="text"],
 INPUT[type="email"],
 TEXTAREA {
     border: none;
+    border-radius: var(--SM);
+
     background: var(--bgC);
     color: var(--TC);
     font-size: var(--FS_S);
@@ -1038,7 +1040,7 @@ I {
     translate: 0;
 }
 .icon_container {
-    @include flex(row, center, center);
+    @include flexCenter();
     padding: 0.5rem;
     width: 100%;
     height: auto;
@@ -1046,7 +1048,8 @@ I {
     fill: var(--FC);
 }
 .bubble {
-    @include flex(column, center, center);
+    @include flexCenter();
+    flex-direction: column;
     position: absolute;
     background: var(--NVC);
     border-radius: 0.5rem;
@@ -1147,14 +1150,12 @@ I {
     }
 }
 .btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexCenter();
     min-height: var(--iconD);
     width: 100%;
     color: var(--TC_C);
     outline: solid 2px var(--FC);
-    border-radius: 2rem;
+    border-radius: var(--XL);
     text-align: center;
     padding: 1rem 0.5rem;
     cursor: pointer;
@@ -1174,10 +1175,8 @@ I {
     }
 }
 .btn_down {
-    display: flex;
+    @include flexCenter();
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 8rem;
     height: 6rem;
     color: var(--TC);
@@ -1216,7 +1215,7 @@ I {
     .icon_btn {
         display: none;
     }
-    @include flex(row, center, center);
+    @include flexCenter();
     .icon_svg {
         height: 100%;
         width: auto;
@@ -1230,7 +1229,7 @@ I {
     }
 }
 .extra_btn {
-    @include flex(row, center, center);
+    @include flexCenter();
     fill: var(--TC);
     height: var(--iconD);
     border-radius: 1rem;
@@ -1249,7 +1248,6 @@ I {
     }
 }
 .more_btn {
-    border-radius: 0.5rem;
     color: var(--TC);
     font-weight: var(--FW_B);
     font-size: var(--FS_N);
@@ -1269,7 +1267,7 @@ I {
     width: 100%;
     font-size: var(--FS_N);
     color: var(--TC);
-    @include flex(row, center, center);
+    @include flexCenter();
     .icon_container {
         height: 100%;
         width: auto;
@@ -1323,9 +1321,8 @@ I {
     width: 3rem;
     height: 3rem;
 }
-
 .menu_btn {
-    @include flex(row, center, center);
+    @include flexCenter();
     width: auto;
     height: 100%;
     color: var(--TC);
@@ -1407,11 +1404,9 @@ I {
     font-size: var(--FS_L);
 }
 .title_section {
-    @include flex(row, center, center);
-
+    @include flexCenter();
     width: 100%;
     height: auto;
-    margin-top: 2rem;
     -webkit-text-stroke: 1px var(--FC);
     color: transparent;
     font-size: var(--FS_X);
@@ -1456,7 +1451,8 @@ I {
 .service_card {
     .info_card {
         transition: all 500ms ease-in-out;
-        @include flex(column, center, center);
+        @include flexCenter();
+        flex-direction: column;
         background: var(--bgC_UT);
         width: 100%;
         height: 100%;
@@ -1525,10 +1521,8 @@ I {
         bottom: 0;
         left: 0;
         right: 0;
-        display: flex;
+        @include flexCenter();
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         width: 100%;
         height: 100%;
         padding: var(--XL);
@@ -1550,13 +1544,9 @@ I {
             font-size: var(--FS_N);
         }
         .icons_project_container {
-            display: flex;
-            flex-direction: row;
+            @include flexCenter();
             flex-wrap: wrap;
-            justify-content: center;
-            text-align: flex-start;
-            column-gap: 0.3rem;
-            row-gap: 0.5rem;
+            gap: var(--SM);
             width: 100%;
             text-align: center;
             .icon_container {
@@ -1590,7 +1580,7 @@ I {
     padding: 2rem 0;
 }
 .btns_container {
-    @include flex(row, center, center);
+    @include flexCenter();
     padding-top: 1rem;
 }
 .input_container {
@@ -1631,14 +1621,13 @@ I {
     .portfolio_btn {
         width: fit-content;
         font-size: var(--FS_L);
-        color: var(--TC);
+        color: var(--midGray);
     }
 }
 .cards_hot_container {
-    @include flex(row, center, center);
+    @include flexCenter();
     flex-wrap: wrap;
 
-    font-size: var(--FS_L);
     .project_card {
         min-width: 20rem;
         max-width: 20%;
@@ -1649,6 +1638,10 @@ I {
     padding-top: 0.5rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    justify-content: space-evenly;
+    justify-items: center;
+    align-content: space-evenly;
+    align-items: center;
 }
 .lists_container {
     @include flex(row, flex-start, flex-start);
@@ -1708,7 +1701,7 @@ I {
     }
     .search_list_btn {
         text-transform: uppercase;
-        @include flex(row, center, center);
+        @include flexCenter();
         gap: 0.5rem;
         background: var(--bgM);
         border-radius: 0;
@@ -1721,9 +1714,7 @@ I {
             line-height: 1;
         }
         .icon_container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include flexCenter();
             height: 2rem;
             width: 2rem;
             padding: 0;
@@ -1898,7 +1889,7 @@ I {
     @include flexCenter();
     overflow: hidden;
     .quote_container {
-        @include flex(row, center, center);
+        @include flexCenter();
         height: 100%;
         .quote {
             font-size: var(--fontSizeXClamp);
@@ -1977,15 +1968,10 @@ I {
 .section {
     height: auto;
     @include flex(column, flex-start, center);
-    .content {
-        padding: 4rem 0;
-    }
 }
 .section_content {
-    display: flex;
+    @include flexCenter();
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     min-height: calc(100vh - var(--NVH));
     min-height: var(--FS_NVH);
 }
@@ -2046,8 +2032,6 @@ I {
     width: 100%;
     .section_content {
         position: relative;
-        justify-content: center;
-        align-items: flex-start;
     }
 
     .about_salute {
@@ -2083,10 +2067,7 @@ I {
     }
 }
 .badge {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    @include flex(column, flex-start, center);
     gap: 0.5rem;
     color: var(--TC_C);
     padding: 1rem;
@@ -2096,9 +2077,7 @@ I {
         line-height: 1;
         text-align: center;
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flexCenter();
     }
 }
 .skill_badge {
@@ -2125,13 +2104,13 @@ I {
     position: relative;
 }
 .clients_section {
-    @include flex(row, center, center);
+    @include flexCenter();
     .clients_container {
         width: 100%;
         height: fit-content;
     }
     .client_logo_container {
-        @include flex(row, center, center);
+        @include flexCenter();
         padding: 1rem 1.5rem;
         height: 8rem;
         width: 12.5rem;
@@ -2163,7 +2142,7 @@ I {
         }
     }
     .whatsapp_btn {
-        @include flex(row, center, center);
+        @include flexCenter();
         gap: 4rem;
         padding: 1rem 2rem;
         background: var(--NVC);
@@ -2226,7 +2205,7 @@ I {
     }
 }
 .clients_list {
-    @include flex(row, center, center);
+    @include flexCenter();
     flex-wrap: wrap;
     gap: var(--XL);
     .icon_container {
@@ -2255,7 +2234,7 @@ I {
     height: var(--NVH);
     background: var(--NVC_T);
     z-index: 5;
-    @include flex(row, center, center);
+    @include flexCenter();
     .content {
         padding: 0;
     }
@@ -2275,7 +2254,7 @@ I {
     }
 }
 .nav_menu_controler {
-    @include flex(row, center, center);
+    @include flexCenter();
     .btn_container,
     .nav_menu_link_btns,
     .nav_menu_icon_svg {
@@ -2286,7 +2265,7 @@ I {
     height: 100%;
 
     .nav_menu_link_btns {
-        @include flex(row, center, center);
+        @include flexCenter();
     }
 
     .nav_btn {
@@ -2311,7 +2290,8 @@ I {
     right: 0;
     top: 0;
     border-radius: 0.5rem 0.5rem 0 0;
-    @include flex(column, center, center);
+    @include flexCenter();
+    flex-direction: column;
 
     height: auto;
     width: 100%;
@@ -2342,7 +2322,7 @@ I {
             padding-top: 0;
         }
         .label_btn {
-            @include flex(row, center, center);
+            @include flexCenter();
             height: var(--iconD);
             min-width: var(--iconD);
         }
@@ -2361,7 +2341,8 @@ I {
     }
 }
 .menu_social_container {
-    @include flex(column, center, center);
+    @include flexCenter();
+    flex-direction: column;
     position: fixed;
     bottom: 4rem;
     left: 2rem;
@@ -2400,7 +2381,8 @@ I {
 }
 
 .menu_social_btns_container {
-    @include flex(column, center, center);
+    @include flexCenter();
+    flex-direction: column;
 
     display: none;
     opacity: 0;
@@ -2498,7 +2480,7 @@ I {
 }
 @media screen and (min-width: 767px) {
     .flex_responsive {
-        @include flex(row, center, center);
+        @include flexCenter();
     }
     .flex_img {
         flex-basis: 30%;
