--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1132,16 +1132,6 @@ I {
     .header_bubble {
         background: url(../img/backgrounds/graffitiSmall.webp);
     }
-
-    /*   .icons_container {
-        gap: 0;
-        width: 100%;
-        .icon_container {
-            height: 3rem;
-            width: 3rem;
-            padding: 0.5rem;
-        }
-    } */
 }
 .info_bubble {
     padding: 1rem;
@@ -1201,9 +1191,13 @@ I {
         fill: var(--TC_C);
     }
 }
-
-.nav_btn {
+.phone_social_btn {
+    border-radius: var(--MD);
+}
+.nav_btn:not(.phone_lang_btn) {
     height: 100%;
+}
+.nav_btn {
     color: var(--TC);
     .label_btn {
         width: fit-content;
@@ -1536,10 +1530,6 @@ I {
             gap: var(--SM);
             width: 100%;
             text-align: center;
-            /*  .icon_container {
-                width: 3rem;
-                height: 3rem;
-            } */
             .tech_icon_card {
                 width: auto;
                 height: 100%;
@@ -2115,18 +2105,14 @@ I {
         }
     }
     .whatsapp_btn {
-        @include flexCenter();
-        gap: 4rem;
-        padding: 1rem 2rem;
+        padding: 0 var(--XL);
+        width: fit-content;
+        gap: var(--SM);
         background: var(--NVC);
         border-radius: 3rem;
-        margin-top: 2rem;
+        margin-top: var(--XL);
         color: var(--TC);
-        .icon_container {
-            width: 3rem;
-            height: 3rem;
-            padding: 0.25rem;
-        }
+
         &:hover {
             color: var(--whiteOff);
             background: var(--btnGradient);
