--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -92,6 +92,8 @@
     --T_F: all 350ms ease-in-out;
     --T_M: all 750ms ease-in-out;
     --T_S: all 1000ms ease-in-out;
+
+    --T_SCALE: scale 500ms cubic-bezier(0.51, -0.42, 0.06, 1.45);
     --NVH_F: 6rem;
     --NVH: 8rem;
     --FS_NVH: calc(100svh - var(--NVH));
@@ -137,14 +139,6 @@
         opacity: 0.2;
     }
 }
-@keyframes zoom {
-    50% {
-        transform: scale(1.2);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
 @keyframes beat {
     10% {
         transform: translate(-50%, -50%) scale(1.3);
@@ -157,28 +151,6 @@
     }
     100% {
         transform: translate(-50%, -50%) scale(1);
-    }
-}
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-@keyframes textAnimation {
-    0% {
-        opacity: 0;
-    }
-    20% {
-        opacity: 1;
-    }
-    80% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
     }
 }
 @keyframes scrollHero {
@@ -1343,6 +1315,8 @@ I {
     transition: var(--T_M);
     width: fit-content;
     height: 6rem;
+    scale: 1;
+    transition: var(--T_SCALE);
     //*LOGO COLORS START
     .johnK_full,
     .johnK_icon {
@@ -1371,7 +1345,7 @@ I {
     &:hover,
     &:focus,
     &:active {
-        animation: zoom 1s ease;
+        scale: 1.2;
     }
 
     .remove {
@@ -1412,8 +1386,12 @@ I {
     color: transparent;
     font-size: var(--FS_X);
 }
-.animated_social_btn:hover {
-    animation: zoom 1s ease-in-out 2 forwards;
+
+.animated_social_btn {
+    transition: var(--T_SCALE);
+    &:hover {
+        scale: 1.2;
+    }
 }
 .social_btns_container {
     @include flex(row, space-between, center);
@@ -2093,32 +2071,6 @@ I {
 }
 .services_container {
     position: relative;
-}
-.clients_section {
-    @include flexCenter();
-    .clients_container {
-        width: 100%;
-        height: fit-content;
-    }
-    .client_logo_container {
-        @include flexCenter();
-        padding: 1rem 1.5rem;
-        height: 8rem;
-        width: 12.5rem;
-        filter: grayscale(1);
-        transition: all 0.5s ease;
-
-        .client_icon_svg {
-            width: 100%;
-            height: auto;
-        }
-        &:hover,
-        &:focus,
-        &:active {
-            filter: grayscale(0);
-            animation: zoom 1000ms ease-out;
-        }
-    }
 }
 .contact_section {
     .bg_section {
