--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -160,9 +160,9 @@
     }
     40% {
         opacity: 0;
+        transform: translateY(30svh);
     }
     100% {
-        transform: translateY(50rem);
         opacity: 0;
     }
 }
@@ -1993,6 +1993,7 @@ I {
         animation: scrollHero linear both;
         animation-timeline: --scroll;
         animation-range: exit;
+        z-index: -1;
     }
 }
 .about_section {
