--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1964,6 +1964,7 @@ I {
     .btns_container {
         justify-content: space-between;
         width: 100%;
+        max-width: 35rem;
         height: auto;
         gap: var(--MD);
         .btn {
