--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1965,8 +1965,7 @@ I {
         justify-content: space-between;
         width: 100%;
         max-width: 35rem;
-        height: auto;
-        gap: var(--MD);
+        gap: var(--XL);
         .btn {
             max-width: 15rem;
             min-width: 10rem;
